Group a multi-index DataFrame

--- a/studying_pandas.ipynb
+++ b/studying_pandas.ipynb
@@ -4012,6 +4012,644 @@
     "\n",
     "iris.groupby('class')[['petal length', 'sepal length']].aggregate(['min', 'mean', 'max'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grouping Multi-Index DataFrame\n",
+    "\n",
+    "DataFrames can be split / grouped by multiple indexes. Let's use a simple DataFrame with abstract index columns and random data for this exercise, just to demonstrate the concept. Later in this module we will apply these concepts to the 311 New York dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.846447</td>\n",
+       "      <td>-0.536967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>two</td>\n",
+       "      <td>0.859428</td>\n",
+       "      <td>0.465420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>three</td>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>two</td>\n",
+       "      <td>1.547825</td>\n",
+       "      <td>1.530492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>bar</td>\n",
+       "      <td>two</td>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>one</td>\n",
+       "      <td>0.840301</td>\n",
+       "      <td>-1.088913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>foo</td>\n",
+       "      <td>three</td>\n",
+       "      <td>1.352814</td>\n",
+       "      <td>0.063664</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A      B         C         D\n",
+       "0  foo    one  0.846447 -0.536967\n",
+       "1  bar    one  0.842366 -1.426950\n",
+       "2  foo    two  0.859428  0.465420\n",
+       "3  bar  three -0.979027 -0.303423\n",
+       "4  foo    two  1.547825  1.530492\n",
+       "5  bar    two  1.197933 -0.251896\n",
+       "6  foo    one  0.840301 -1.088913\n",
+       "7  foo  three  1.352814  0.063664"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating sample DataFrame to demonstrate the concepts\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame({'A' : ['foo', 'bar', 'foo', 'bar',\n",
+    "                          'foo', 'bar', 'foo', 'foo'],\n",
+    "                   'B' : ['one', 'one', 'two', 'three',\n",
+    "                          'two', 'two', 'one', 'three'],\n",
+    "                   'C' : np.random.randn(8),\n",
+    "                   'D' : np.random.randn(8)})\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('bar', 'one'): [1], ('bar', 'three'): [3], ('bar', 'two'): [5], ('foo', 'one'): [0, 6], ('foo', 'three'): [7], ('foo', 'two'): [2, 4]}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can use columns A and B as keys and split/group the DataFrame df by both keys:\n",
+    "grouped_df = df.groupby(['A', 'B'])\n",
+    "\n",
+    "grouped_df.groups\n",
+    "\n",
+    "# Within the groups with the key 'foo', 'one' comes before 'three' which comes before 'two' alphabetically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('bar', 'one')\n",
+      "     A    B         C        D\n",
+      "1  bar  one  0.842366 -1.42695\n",
+      "('bar', 'three')\n",
+      "     A      B         C         D\n",
+      "3  bar  three -0.979027 -0.303423\n",
+      "('bar', 'two')\n",
+      "     A    B         C         D\n",
+      "5  bar  two  1.197933 -0.251896\n",
+      "('foo', 'one')\n",
+      "     A    B         C         D\n",
+      "0  foo  one  0.846447 -0.536967\n",
+      "6  foo  one  0.840301 -1.088913\n",
+      "('foo', 'three')\n",
+      "     A      B         C         D\n",
+      "7  foo  three  1.352814  0.063664\n",
+      "('foo', 'two')\n",
+      "     A    B         C         D\n",
+      "2  foo  two  0.859428  0.465420\n",
+      "4  foo  two  1.547825  1.530492\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can iterate over groups and print the group name and group data as follows:\n",
+    "for (key1, key2), group in df.groupby(['A', 'B']):\n",
+    "    print((key1, key2))\n",
+    "    print(group) # qn ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.843374</td>\n",
+       "      <td>-0.812940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1.352814</td>\n",
+       "      <td>0.063664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1.203627</td>\n",
+       "      <td>0.997956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  C         D\n",
+       "A   B                        \n",
+       "bar one    0.842366 -1.426950\n",
+       "    three -0.979027 -0.303423\n",
+       "    two    1.197933 -0.251896\n",
+       "foo one    0.843374 -0.812940\n",
+       "    three  1.352814  0.063664\n",
+       "    two    1.203627  0.997956"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# And now we can calculate the means of the grouped data:\n",
+    "grouped_df.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           C  D\n",
+       "A   B          \n",
+       "bar one    1  1\n",
+       "    three  1  1\n",
+       "    two    1  1\n",
+       "foo one    2  2\n",
+       "    three  1  1\n",
+       "    two    2  2"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Other methods are also supported, for example, max() or min(), or count(), etc.:\n",
+    "grouped_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the DataFrame has a hierarchical index, we can group by one of the levels of the hierarchy. In order to demonstrate this scenario, we will update the df DataFrame by setting the index to be a two-level MultiIndex:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.846447</td>\n",
+       "      <td>-0.536967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.842366</td>\n",
+       "      <td>-1.426950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>foo</th>\n",
+       "      <th>two</th>\n",
+       "      <td>0.859428</td>\n",
+       "      <td>0.465420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bar</th>\n",
+       "      <th>three</th>\n",
+       "      <td>-0.979027</td>\n",
+       "      <td>-0.303423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>foo</th>\n",
+       "      <th>two</th>\n",
+       "      <td>1.547825</td>\n",
+       "      <td>1.530492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bar</th>\n",
+       "      <th>two</th>\n",
+       "      <td>1.197933</td>\n",
+       "      <td>-0.251896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>0.840301</td>\n",
+       "      <td>-1.088913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1.352814</td>\n",
+       "      <td>0.063664</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  C         D\n",
+       "A   B                        \n",
+       "foo one    0.846447 -0.536967\n",
+       "bar one    0.842366 -1.426950\n",
+       "foo two    0.859428  0.465420\n",
+       "bar three -0.979027 -0.303423\n",
+       "foo two    1.547825  1.530492\n",
+       "bar two    1.197933 -0.251896\n",
+       "foo one    0.840301 -1.088913\n",
+       "    three  1.352814  0.063664"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.set_index(['A', 'B'], inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([('foo',   'one'),\n",
+       "            ('bar',   'one'),\n",
+       "            ('foo',   'two'),\n",
+       "            ('bar', 'three'),\n",
+       "            ('foo',   'two'),\n",
+       "            ('bar',   'two'),\n",
+       "            ('foo',   'one'),\n",
+       "            ('foo', 'three')],\n",
+       "           names=['A', 'B'])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to confirm that we have a DataFrame with MultiIndex\n",
+    "df.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "level : int, level name, or sequence of such, default None\n",
+    "    If the axis is a MultiIndex (hierarchical), group by a particular level or levels. Do not specify both by and level."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">bar</th>\n",
+       "      <th>one</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">foo</th>\n",
+       "      <th>one</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>three</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           C  D\n",
+       "A   B          \n",
+       "bar one    1  1\n",
+       "    three  1  1\n",
+       "    two    1  1\n",
+       "foo one    2  2\n",
+       "    three  1  1\n",
+       "    two    2  2"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we can group by one or both levels:\n",
+    "df.groupby(level=['A', 'B']).count()"
+   ]
   }
  ],
  "metadata": {
